k8s/overlays/release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corp-web-ingress
  namespace: corp-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod   # 🔹 Reference staging ClusterIssuer
spec:
  tls:
  - hosts:
    - corp-web.qatalyst.tech   # 🔹 Replace with your domain
    secretName: corp-web-tls # 🔹 Secret will be created automatically
  rules:
  - host: corp-web.qatalyst.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
